force-app/main/default/objects/DisputeItem/fields/AccountDetails__c.field-meta.xml
<CustomField>
    <fullName>AccountDetails__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Displays the contcatenation of Account Type and Account Number (e.g. ANZ Plus Account 12345677).</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Account Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>