force-app/main/default/objects/DisputeItem/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Cases to show associated linked Transactions to Agents.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Dispute Items</relationshipLabel>
    <relationshipName>Dispute_Items</relationshipName>
    <type>Lookup</type>
</CustomField>