force-app/main/default/objects/DisputeItem/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Error Message that comes from Fabric or MuleSoft</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Message</label>
    <length>6</length>
    <type>Text</type>
</CustomField>