force-app/main/default/objects/DisputeItem/fields/OtherFinancialInstituteAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherFinancialInstituteAccountNumber__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Other Financial Institute Account Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Other Financial Institute Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>