force-app/main/default/objects/DisputeItem/fields/OtherFinancialInstituteBSB__c.field-meta.xml
<CustomField>
    <fullName>OtherFinancialInstituteBSB__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Other Financial Institute BSB</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Other Financial Institute BSB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>