force-app/main/default/objects/DisputeItem/fields/RecoveryAmount__c.field-meta.xml
<CustomField>
    <fullName>RecoveryAmount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Amount Recovered by the Customer</description>
    <label>Recovery Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>