force-app/main/default/objects/DisputeItem/fields/RecoveryLocation__c.field-meta.xml
<CustomField>
    <fullName>RecoveryLocation__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A single location where transactions can reside with recovery status tagged against each transaction</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Recovery Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>