force-app/main/default/objects/DisputeItem/fields/RecoveryStatus__c.field-meta.xml
<CustomField>
    <fullName>RecoveryStatus__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Ensures a recovery is not actioned to an incorrect bank which then has to be recalled.</description>
    <label>Recovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIL Recovery</fullName>
            </value>
            <value>
                <fullName>Pending OFI Response</fullName>
            </value>
            <value>
                <fullName>7-Day Sent</fullName>
            </value>
            <value>
                <fullName>Recovery Processed</fullName>
            </value>
            <value>
                <fullName>Recovery Pledged</fullName>
            </value>
            <value>
                <fullName>Onforwarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>