force-app/main/default/objects/DisputeItem/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Formatted transaction  title which appears when viewing the transaction on the customer device</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>