force-app/main/default/objects/DisputeItem/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Value_Time of Fabric. Timestamp at which assets become available to the account owner in case of a credit entry, or cease to be available to the account owner in case of a debit transaction entry.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>