force-app/main/default/objects/DisputeItem/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Transaction Type as assigned by CTM/Core systems</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>PAYID</fullName>
            </value>
            <value>
                <fullName>BSB_ACC</fullName>
                <label>BSB/ACC</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>Deposit_Withdrawal</fullName>
                <label>Deposit Withdrawal</label>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Direct_Debit</fullName>
                <label>Direct Debit</label>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>