force-app/main/default/objects/DisputeItem/recordTypes/Disputed_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Disputed_Transaction</fullName>
    <active>true</active>
    <label>Disputed Transaction</label>
</RecordType>