force-app/main/default/objects/DisputeItem/validationRules/VR_Fields_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Fields_Not_Editable</fullName>
    <active>true</active>
    <description>Prevents users from editing the required read-only fields</description>
    <errorConditionFormula>AND(
 NOT($Setup.Salesforce_Library_Settings__c.Disable_VRs__c),
 RecordType.DeveloperName = &apos;Disputed_Transaction&apos;,
 OR( ISCHANGED( DisputeId ),  ISCHANGED( TransactionDate ) )
)</errorConditionFormula>
    <errorMessage>The following fields are not editable: Dispute, Transaction Date.</errorMessage>
</ValidationRule>