force-app/main/default/objects/DisputeItem/validationRules/VR_Recovery_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Recovery_Amount</fullName>
    <active>true</active>
    <description>Prevents users to enter Recovery Amount values greater than the Transaction Amount</description>
    <errorConditionFormula>AND(
 NOT($Setup.Salesforce_Library_Settings__c.Disable_VRs__c),
 RecordType.DeveloperName = &apos;Disputed_Transaction&apos;,
 RecoveryAmount__c  &gt;  TransactionAmount 
)</errorConditionFormula>
    <errorDisplayField>RecoveryAmount__c</errorDisplayField>
    <errorMessage>The Recovery Amount should not be more than the Transaction Amount.</errorMessage>
</ValidationRule>